Fixed bug #38004 Parameters in SoapServer are decoded twice