ext/soap/php_encoding.c
@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_encoding.c,v 1.103.2.21.2.3 2006/06/15 22:45:30 rasmus Exp $ */
+/* $Id: php_encoding.c,v 1.103.2.21.2.4 2006/07/10 07:21:41 dmitry Exp $ */
 
 #include <time.h>
 
@@ -1353,11 +1353,12 @@ static zval *to_zval_object_ex(encodeTypePtr type, xmlNodePtr data, zend_class_e
 						str_val = (*attr)->def;
 					}
 					if (str_val) {
+						zval zstr;
 						xmlNodePtr dummy;
 						zval *data;
 
-						dummy = xmlNewNode(NULL, "BOGUS");
-						xmlNodeSetContent(dummy, str_val);
+						ZVAL_STRING(&zstr, str_val, 0);
+						dummy = master_to_xml(get_conversion(IS_STRING), &zstr, SOAP_LITERAL, NULL);
 						data = master_to_zval((*attr)->encode, dummy);
 						xmlFreeNode(dummy);
 						set_zval_property(ret, (*attr)->name, data TSRMLS_CC);
